--- a/css/estilos.css
+++ b/css/estilos.css
@@ -101,7 +101,7 @@ button {
 .header_section {
 	width: 100%;
 	float: left;
-	background-color: #ffffff;
+	background-color: #dddddddc;
 	padding-bottom: 20px;
 	background-size: 100%;
 	padding-top: 0px;
