--- a/css/estilos.css
+++ b/css/estilos.css
@@ -313,193 +313,6 @@ button {
 	margin-top: 60px;
 
 }
-.contact_section{
-	width: 100%;
-	float: left;
-}
-.contact_main {
-    width: 100%;
-    float: left;
-    background-image: url(../images/contact-bg.png);
-    height: auto;
-    padding-bottom: 70px;
-    background-size: 100%;
-    background-repeat: no-repeat;
-}
-
-.contact_text{
-	width: 100%;
-	float: left;
-	font-size: 40px;
-	color: #000;
-	text-align: center;
-}
-.enput_section {
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 120px;
-}
-
-.email_box {
-    width: 100%;
-    float: left;
-    /* background-color: #ffffff; */
-    /* border-radius: 20px; */
-    height: auto;
-    /* padding: 50px 20px; */
-    /* opacity: 0.80; */
-}
-.form-group {
-    margin-bottom: 2rem;
-}	
-.email-bt {
-    color: #000000;
-    width: 100%;
-    height: 55px;
-    font-size: 18px;
-    padding: 20px;
-}
-.massage-bt {
-    color: #000000;
-    width: 100%;
-    height: 150px;
-    font-size: 18px;
-    padding: 50px 20px 10px 20px;
-}
-
-.send_btn {
-    padding-left: 15px;
-    width: 100%;
-    margin: 0 auto;
-    text-align: center;
-}
-button.main_bt {
-    background: #f7941d;
-    border: none;
-    color: #faf9f9;
-    width: 160px;
-    height: 58px;
-    font-size: 24px;
-    padding-top: 3px;
-}
-button.main_bt a { color: #faf9f9; }
-button.main_bt a:hover { color: #faf9f9; }
-
-.testimonial_section{
-	width: 100%;
-	float: left;
-}
-
-.dolore_text {
-    width: 100%;
-    float: left;
-    text-align: center;
-    color: #111010;
-    margin-left: 0;
-}
-
-.images_3{
-	width: 100%;
-	float: left;
-	text-align: center;
-	padding-bottom: 30px;
-	padding-top: 20px;
-}
-.rooty_text{
-	width: 100%;
-	float: left;
-	text-align: center;
-	font-size: 30px;
-	color: #111010;
-	font-weight: 500;
-}
-
-.ice_text {
-    width: 100%;
-    float: left;
-    text-align: center;
-    font-size: 20px;
-    color: #0a2ba6;
-    margin: 0;
-    font-weight: 500;
-}
-
-.right_quote {
-    text-align: right;
-    position: relative;
-    top: -25px;
-}
-
-.footer_section{
-	width: 100%;
-	float: left;
-	background-color: #051148;
-	height: auto;
-	padding-bottom: 70px;
-	margin-top: 90px;
-
-}
-
-.important_text{
-	width: 100%;
-	float: left;
-	font-size: 26px;
-	color: #ffffff;
-	font-weight: bold;
-}
-.footer_menu{
-	width: 100%;
-	float: left;
-}
-
-.footer_menu ul{
-	margin: 0px;
-	padding: 0px;
-}
-
-.footer_menu li{
-	font-size: 14px;
-	color: #ffffff;
-}
-
-.footer_menu li a{	
-	color: #ffffff;
-}
-.footer_menu li a:hover{ 
-	color: #ff7e1d;
-}
-
-.footer_lorem_text {
-    width: 100%;
-    float: left;
-    font-size: 14px;
-    color: #ffffff;
-    margin: 0px;
-}
-
-.input-group>.input-group-append>.btn, .input-group>.input-group-append>.input-group-text, .input-group>.input-group-prepend:first-child>.btn:not(:first-child), .input-group>.input-group-prepend:first-child>.input-group-text:not(:first-child), .input-group>.input-group-prepend:not(:first-child)>.btn, .input-group>.input-group-prepend:not(:first-child)>.input-group-text {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    background-color: #ff7e1d;
-    height: 50px;
-    color: #fff;
-    border: 0px;
-}
-.mb-3, .my-3 {
-    margin-bottom: 0rem!important;
-    width: 82%;
-    padding-top: 20px;
-}
-.copyright_text{
-	width: 100%;
-	float: left;
-	color: #040614;
-	text-align: center;
-	background-color: #ffffff;
-	padding: 10px 0px;
-	font-size: 15px;
-}
 
 .sidebar {
   height: 100%;
@@ -535,24 +348,71 @@ button.main_bt a:hover { color: #faf9f9; }
   margin-left: 50px;
 }
 
-.openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
 }
 
-.openbtn:hover {
-  background-color: #444;
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: linear-gradient(to right, #252eb1, #7249bd);
 }
 
-#main {
-  transition: margin-left .5s;
+form {
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    text-align: center;
+    padding: 20px 25px;
+    box-shadow: 0 5px 10px rgba(71, 3, 6, 0.7);
+}
+
+form .title {
+    color: #252525;
+    font-size: 35px;
+    font-weight: 800;
+    margin-bottom: 30px;
+}
+
+form label {
+    margin-bottom: 35px;
+}
+
+form label .fa-solid {
+    font-size: 20px;
+    color: #3b26af;
+    margin-right: 10px;
+}
+
+form label input {
+    outline: none;
+    border: none;
+    color: #252525;
+    border-bottom: solid 1px #000000;
+    padding: 0 5px;
+    font-size: 18px;
+}
+
+form label input::placeholder {
+    color: rgba(37, 37, 37, 0.5);
 }
 
 
-.footer_padding{
-	margin: 0px;
+form .link {
+    color: #252525;
+    margin-bottom: 15px;
+}
+
+form button {
+    color: #fff;
+    border: none;
+    background: linear-gradient(to right, #4223cb, #3b0bc0);
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 20px;
 }
